--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@nuxt/test-utils": "^3.0.0-rc.13",
+    "@types/nodemailer": "^6.4.6",
     "jsdom": "^20.0.2",
-    "nuxt": "^3.0.0-rc.11",
+    "nuxt": "3.0.0-rc.11",
     "prisma": "^4.5.0"
   },
   "dependencies": {
@@ -22,8 +23,6 @@
     "axios": "^1.1.3",
     "bulma": "^0.9.4",
     "nodemailer": "^6.8.0",
-    "nuxt3": "^3.0.0-rc.10-27713517.9abc7a2",
-    "pinia": "^2.0.23",
     "typescript": "^4.8.4",
     "vitest": "latest"
   }
