--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.1.3",
     "bulma": "^0.9.4",
     "nodemailer": "^6.8.0",
+    "sweetalert2": "^11.6.8",
     "typescript": "^4.8.4",
     "vitest": "latest"
   }
