--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,9 @@ jobs:
           cache: "npm"
       #- run: npm run build --if-present
       - name: Execute Unit tests
-      - run: | 
+      - run: |
           npm ci
-          npm run test:unit
+          npm run test
   build-docker:
     runs-on: ubuntu-latest
     steps:
