--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Use Node.js ${{ matrix.node-version }}
-      - uses: |
+        uses: |
           actions/checkout@v3
           actions/setup-node@v3
         with:
