--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,17 +15,16 @@ jobs:
 
     steps:
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: |
-            actions/checkout@v3
-            actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       #- run: npm run build --if-present
       - name: Execute Unit tests
       - run: |
-            npm ci
-            npm run test
+          npm ci
+          npm run test
   build-docker:
     runs-on: ubuntu-latest
     steps:
