--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,23 +6,6 @@ on:
     branches: [ci-cd]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      #- run: npm run build --if-present
-      - run: |
-          npm ci
-          npm run test
   build-docker:
     runs-on: ubuntu-latest
     steps:
@@ -39,3 +22,21 @@ jobs:
           push: true
           tags: nws-material:latest
           target: nws-material
+  build:
+    runs-on: ubuntu-latest
+    needs: [build-docker]
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      #- run: npm run build --if-present
+      - run: |
+          npm ci
+          npm run test
