--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,5 @@ jobs:
           cache: "npm"
       #- run: npm run build --if-present
       - run: |
-          npm ci
+          npm i
           npm run test
