--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       #- run: npm run build --if-present
       - run: |
           npm i
+          npm run build
           npm run test
   build-docker:
     runs-on: ubuntu-latest
