--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,34 +7,32 @@ jobs:
   build:
     needs: [build-docker]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16]
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
           cache: "npm"
-      #- run: npm run build --if-present
       - run: |
           npm i
           npm run build
           npm run test
   build-docker:
+    environment:
+      .env
     runs-on: ubuntu-latest
     steps:
       - name: Login to Github Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io # lien pour registry github
+          username: ${{ github.actor }} # actor github
+          password: ${{ secrets.GITHUB_TOKEN }} # Génère un token de Github
 
       - name: Build and push to Github Repository
         uses: docker/build-push-action@v3
         with:
-          push: true
-          tags: ghcr.io/matthiasfaucon/nws-material:latest
-          target: nws-material
+          push: true # push image dans le Github Registry
+          tags: ghcr.io/matthiasfaucon/nws-material:latest # mettre un tag à l'image dans le Github Registry
+          target: nws-material # sélectionner le Dockerfile
