--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,10 @@ jobs:
           npm run build
           npm run test
   build-docker:
+    env:
+      - ${{ secrets.DATABASE_URL }}
+      - ${{ secrets.DB_PASSWORD }}
+      - ${{ secrets.GMAIL_APP_PASSWORD }}
     runs-on: ubuntu-latest
     steps:
       - name: Login to Github Container Registry
