--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: [push]
 
 jobs:
   build:
-    needs: [build-docker]
+    needs:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +17,20 @@ jobs:
       - run: |
           npm i
           npm run build
+    build-prisma:
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "npm"
+      - run: |
+          npx prisma migrate deploy
   build-docker:
+    [build, build-prisma]
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
