--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
+      - name: Cache .nuxt
+        id: cache-node_modules
+        uses: actions/cache@v3
         with:
           path: .nuxt
           key: ${{ runner.os }}-nuxt
@@ -61,6 +64,9 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
+      - name: Cache .nuxt
+        id: cache-node_modules
+        uses: actions/cache@v3
         with:
           path: .nuxt
           key: ${{ runner.os }}-nuxt
