--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nuxt/test-utils": "^3.0.0-rc.13",
     "@types/nodemailer": "^6.4.6",
     "jsdom": "^20.0.2",
-    "nuxt": "3.0.0-rc.11",
+    "nuxt": "^3.0.0-rc.14",
     "prisma": "^4.5.0"
   },
   "dependencies": {
