--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run:
-          npx prisma studio
+          npx prisma migrate deploy
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
