--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run:
-          npx prisma migrate dev 
+          npx prisma migrate deploy 
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
