--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
           docker compose up --build -d
-          npx prisma migrate deploy 
+          npx prisma migrate dev 
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
