--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,8 +74,7 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
-          docker compose up --build -d
-          npx prisma migrate deploy 
+          npx prisma migrate dev 
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
