--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
           docker compose up -d --build --force-recreate
           docker ps
       - run:
-          npx prisma migrate dev
+          npx prisma migrate dev --name test-ci
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
