--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
       - run: |
           docker compose up -d --build --force-recreate
           docker ps
+          docker logs -f nws-materials-db-1
           npx prisma migrate deploy
           npx prisma migrate resolve
   test:
