--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
       - run: |
           docker compose up -d --build --force-recreate
           docker ps
-          docker exec -i nws-materials-db-1 bash -c "prisma migrate deploy"
+          docker exec nws-materials-db-1 bash -ci "npx prisma migrate deploy"
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
