--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pinia": "^2.0.26",
     "sweetalert2": "^11.6.8",
     "typescript": "^4.8.4",
-    "vitest": "latest"
+    "vitest": "latest",
+    "npx": "latest"
   }
 }
