--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "axios": "^1.1.3",
     "bulma": "^0.9.4",
     "nodemailer": "^6.8.0",
+    "npx": "^3.0.0",
     "pinia": "^2.0.26",
-    "sweetalert2": "^11.6.8",
+    "sweetalert2": "^11.4.8",
     "typescript": "^4.8.4",
-    "vitest": "latest",
-    "npx": "latest"
+    "vitest": "latest"
   }
 }
