--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,7 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
+          docker compose up -d --build --force-recreate
           docker ps
           docker exec nws-materials-app-1 sh -c "npx prisma migrate dev --name init"
   test:
