--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
       - run: |
           docker compose up -d --build --force-recreate
           docker ps
+          docker exec nws-materials-app-1 sh -c "npx prisma generate"
           docker exec nws-materials-app-1 sh -c "npx prisma migrate dev --name init"
   test:
     needs: [prisma]
