--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       MYSQL_USER: nws_app
       MYSQL_PASSWORD: "${DB_PASSWORD}"
       MYSQL_RANDOM_ROOT_PASSWORD: true
+    ports:
+      - 3306:3306
     volumes:
       - mysqldb-data:/var/lib/mysql
   reverse-proxy:
