--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,33 +50,6 @@ jobs:
           push: true # push image dans le Github Registry
           tags: ghcr.io/matthiasfaucon/nws-material:latest # mettre un tag à l'image dans le Github Registry
           target: nws-material # sélectionner le Dockerfile
-  prisma:
-    needs: [build-docker]
-    runs-on: ubuntu-latest
-    env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-      - name: Cache node_modules
-        id: cache-node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
-      - name: Cache .nuxt
-        id: cache-nuxt
-        uses: actions/cache@v3
-        with:
-          path: .nuxt
-          key: ${{ runner.os }}-nuxt-${{ github.run_id }}
-      - run: |
-          docker compose up -d --build
-          docker ps
-          docker exec nws-materials-app-1 sh -c "npx prisma generate"
-          docker exec nws-materials-app-1 sh -c "npx prisma migrate dev --name init"
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
@@ -99,5 +72,4 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
-          npm i
-          npm run test
+          docker exec nws-materials-app-1 sh -c "npm i && npm run test"
