--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,4 +72,5 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
+          docker compose up -d --build
           docker exec nws-materials-app-1 sh -c "npm i && npm run test"
