--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,8 @@ run-name: Build and Tests
 on: [push]
 
 env:
-  DATABASE_URL: ${{ secrets.DATABASE_URL }}
-  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD_TEST }}
   GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
 jobs:
   build:
@@ -34,8 +34,8 @@ jobs:
   build-docker:
     needs: [build]
     env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD_TEST }}
       GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
     runs-on: ubuntu-latest
     steps:
@@ -55,8 +55,8 @@ jobs:
     needs: [build-docker]
     runs-on: ubuntu-latest
     env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD_TEST }}
       GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
     steps:
       - uses: actions/checkout@v3
@@ -78,7 +78,7 @@ jobs:
           docker ps
           sleep 30
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
-          docker exec nws-materials-app-1 sh -c "npx prisma migrate db push"
+          docker exec nws-materials-app-1 sh -c "npx prisma migrate dev --name init"
   test:
     needs: [prisma]
     runs-on: ubuntu-latest
