--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,5 +101,5 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
-          docker compose up -d --build
+          docker compose -f docker-compose-ci.yml up -d --build
           docker exec nws-materials-app-1 sh -c "npm i && npm run test"
