--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,9 @@
 name: Runs All Unit tests
 run-name: Build and Tests
-
 on: [push]
-
 env:
-  DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
-  DB_PASSWORD: ${{ secrets.DB_PASSWORD_TEST }}
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
   GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
 jobs:
   build:
@@ -34,8 +32,8 @@ jobs:
   build-docker:
     needs: [build]
     env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD_TEST }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
     runs-on: ubuntu-latest
     steps:
@@ -55,8 +53,8 @@ jobs:
     needs: [build-docker]
     runs-on: ubuntu-latest
     env:
-      DATABASE_URL: ${{ secrets.DATABASE_URL_TEST }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD_TEST }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
     steps:
       - uses: actions/checkout@v3
@@ -74,7 +72,7 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
-          docker compose -f docker-compose-ci.yml up -d --build
+          docker compose up -d --build
           docker ps
           sleep 30
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
@@ -101,5 +99,5 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
-          docker compose -f docker-compose-ci.yml up -d --build
+          docker compose up -d --build
           docker exec nws-materials-app-1 sh -c "npm i && npm run test"
