--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "test": "vitest --run --reporter verbose --globals",
     "test:watch": "vitest --reporter verbose --globals"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.js"
+  },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@nuxt/test-utils": "^3.0.0-rc.13",
+    "@types/node": "^18.11.10",
     "@types/nodemailer": "^6.4.6",
     "jsdom": "^20.0.2",
     "nuxt": "3.0.0-rc.11",
-    "prisma": "^4.5.0"
+    "prisma": "^4.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.3",
@@ -27,7 +33,6 @@
     "npx": "^3.0.0",
     "pinia": "^2.0.26",
     "sweetalert2": "^11.4.8",
-    "typescript": "^4.8.4",
     "vitest": "latest"
   }
 }
