--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,27 +78,5 @@ jobs:
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
           docker exec nws-materials-app-1 sh -c "npx prisma db push"
           docker exec nws-materials-app-1 sh -c "npx prisma db seed"
-  test:
-    needs: [prisma]
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Cache node_modules
-        id: cache-node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
-      - name: Cache .nuxt
-        id: cache-nuxt
-        uses: actions/cache@v3
-        with:
-          path: .nuxt
-          key: ${{ runner.os }}-nuxt-${{ github.run_id }}
-      - run: |
-          docker compose up -d --build
-          docker exec nws-materials-app-1 sh -c "npm i && npm run test"
+          sleep 10
+          docker exec nws-materials-app-1 sh -c "npm run test"
