--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@nuxt/test-utils": "^3.0.0-rc.13",
-    "@types/node": "^18.11.10",
     "@types/nodemailer": "^6.4.6",
     "jsdom": "^20.0.2",
     "nuxt": "3.0.0-rc.11",
@@ -30,9 +29,9 @@
     "axios": "^1.1.3",
     "bulma": "^0.9.4",
     "nodemailer": "^6.8.0",
-    "npx": "^3.0.0",
-    "pinia": "^2.0.26",
-    "sweetalert2": "^11.4.8",
+    "pinia": "^2.0.27",
+    "sweetalert2": "^11.6.8",
+    "typescript": "^4.8.4",
     "vitest": "latest"
   }
 }
