--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
           docker ps
           sleep 10
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
-          docker exec nws-materials-app-1 sh -c "npx prisma migrate reset"
+          docker exec nws-materials-app-1 sh -c "npx prisma migrate reset --force"
           docker exec nws-materials-app-1 sh -c "npx prisma db seed"
           docker exec nws-materials-app-1 sh -c "npx prisma migrate deploy"
           docker exec nws-materials-app-1 sh -c "npx prisma migrate resolve"
