--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   workflow_run:
     workflows: ["build"]
-    branches: [main]
+    branches: [master]
     types:
       - completed    
 jobs:
