--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,15 @@ services:
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy-data:/data
-
   phpmyadmin:
     image: phpmyadmin
     restart: always
     environment:
       - PMA_HOST=db
+      - WAIT_HOSTS=db:3306, app:3000
+      - WAIT_HOSTS_TIMEOUT=300
+      - WAIT_SLEEP_INTERVAL=30
+      - WAIT_HOST_CONNECT_TIMEOUT=30
     ports:
       - 8080:80
 
