--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,7 @@ jobs:
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
           docker compose up -d --build
+          docker wait db
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
           docker exec nws-materials-app-1 sh -c "npx prisma db push"
           docker exec nws-materials-app-1 sh -c "npx prisma db seed"
