--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,6 @@
 name: Runs All Unit tests
 run-name: Build and Tests
-
 on: [push]
-
 env:
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -28,10 +26,15 @@ jobs:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
+          node --version
           npm i
           npm run build
   build-docker:
     needs: [build]
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
     runs-on: ubuntu-latest
     steps:
       - name: Login to Github Container Registry
@@ -70,7 +73,7 @@ jobs:
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
           docker compose up -d --build
-          docker exec nws-materials-app-1 sh -c "docker wait nws-materials-db-1"
+          docker wait nws-materials-db-1
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
           docker exec nws-materials-app-1 sh -c "npx prisma db push"
           docker exec nws-materials-app-1 sh -c "npx prisma db seed"
