--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 name: Runs All Unit tests
 run-name: Build and Tests
+
 on: [push]
 env:
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -73,7 +74,7 @@ jobs:
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
           docker compose up -d --build
-          docker wait nws-materials-db-1
+          docker exec nws-materials-app-1 sh -c "docker wait nws-materials-db-1"
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
           docker exec nws-materials-app-1 sh -c "npx prisma db push"
           docker exec nws-materials-app-1 sh -c "npx prisma db seed"
