--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       DATABASE_URL: "${DATABASE_URL}" # URL DB
       GMAIL_APP_PASSWORD: "${GMAIL_APP_PASSWORD}"
+      WAIT_HOSTS: db
+
   db:
     image: mysql
     restart: always
