--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,13 @@ jobs:
         with:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
-      - run: |
-          npm i
-          npm run build
+        # env:
+        #   DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        #   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        #   GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+      # - run: |
+      #     npm i
+      #     npm run build
   build-docker:
     needs: [build]
     runs-on: ubuntu-latest
