--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ name: Runs All Unit tests
 run-name: Build and Tests
 
 on: [push]
-
 env:
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
   DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -27,11 +26,8 @@ jobs:
         with:
           path: .nuxt
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
       - run: |
+          node --version
           npm i
           npm run build
   build-docker:
