--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
           key: ${{ runner.os }}-nuxt-${{ github.run_id }}
       - run: |
           docker compose up -d --build
-          docker exec nws-materials-app-1 sh -c "docker wait nws-materials-db-1"
+          sleep 5
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
           docker exec nws-materials-app-1 sh -c "npx prisma db push"
           docker exec nws-materials-app-1 sh -c "npx prisma db seed"
