--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,6 @@ jobs:
           docker compose up -d --build
           sleep 5
           docker exec nws-materials-app-1 sh -c "npx prisma generate"
-          docker exec nws-materials-app-1 sh -c "npx prisma db push -f"
+          docker exec nws-materials-app-1 sh -c "npx prisma db push --accept-data-loss"
           docker exec nws-materials-app-1 sh -c "npx prisma db seed"
           docker exec nws-materials-app-1 sh -c "npm run test"
