--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -3,7 +3,7 @@ name: Deploy in prod
 on:
   workflow_run:
     workflows: [Runs All Unit tests]
-    branches: [release]
+    branches: [release, master]
     types:
       - completed    
 jobs:
@@ -25,5 +25,6 @@ jobs:
       # - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose up -d --build"
 
       # Mode propre
-      - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "ls"
-      - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd materiels_nws && docker pull ghcr.io/matthiasfaucon/nws-material:latest && docker compose up -d && docker image prune -f"
+      - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose pull ghcr.io/matthiasfaucon/nws-material:latest"
+      - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker compose up -d"
+      - run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker image prune -f"
