--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.3",
     "@prisma/client": "^4.5.0",
+    "ansible": "^0.1.1-alpha1",
     "axios": "^1.1.3",
     "bulma": "^0.9.4",
     "nodemailer": "^6.8.0",
