change branch which execute the workflow

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -2,7 +2,7 @@ name: Deploy in prod
 on:
   workflow_run:
     workflows: [Runs All Unit tests]
-    branches: [release, master]
+    branches: [release]
     types:
       - completed    
 jobs:
